fix scrollbar for emojipicker, voice fixes and a few other things

--- a/maroon.theme.css
+++ b/maroon.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"maroon","description":"Based on Slack's aubergine/maroon style, enable Dark Mode in Settings > Appearence for this theme!","author":"phit","version":"0.7.1"}*//{}
+//META{"name":"maroon","description":"Based on Slack's aubergine/maroon style, enable Dark Mode in Settings > Appearence for this theme!","author":"phit","version":"0.7.2"}*//{}
 
 .guilds-wrapper,
 .theme-dark .chat,
@@ -13,7 +13,9 @@
 .theme-dark .messages-wrapper .messages .divider:before,
 .need-help-modal .header,
 .channels-wrap,
-.contentSelectedText-3j5CXt {
+.contentSelectedText-3j5CXt,
+.theme-dark .ui-video,
+.theme-dark .private-channel-call {
     background-color: #3e313c;
 }
 
@@ -55,7 +57,8 @@
 }
 
 .theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-track-piece,
-.theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-track-piece {
+.theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-track-piece,
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
     background-color: #4d394c;
     border-color: #3e313c;
 }
@@ -107,21 +110,6 @@
     border-right-color: #4d394b;
 }
 
-.emoji-picker {
-    background-color: #4d394b !important;
-    border: 1px solid rgba(191, 191, 191, 0.2);
-    box-shadow: 0 0 6px 0 rgba(0,0,0,.1);
-}
-
-.emoji-picker .category {
-    background-color: #4d394b !important;
-    color: #afa8ae;
-}
-
-.emoji-picker .categories .item.selected {
-    border-bottom-color: #afa8ae;
-}
-
 .search-bar.search-bar-light {
     background-color: #4d394b !important;
 }
@@ -134,10 +122,40 @@
     color: #afa8ae !important;
 }
 
-.ui-scroller-fade .scroller:hover::-webkit-scrollbar-thumb, .ui-scroller-fade .scroller:hover::-webkit-scrollbar-track, .ui-scroller-fade:hover::-webkit-scrollbar-thumb, .ui-scroller-fade:hover::-webkit-scrollbar-track {
+.emoji-picker {
     background-color: #4d394b !important;
-    border-color: #4d394b !important;
-    border-radius: 0;
+    border: 1px solid rgba(191, 191, 191, 0.2);
+    border-radius: 8px;
+    box-shadow: 0 0 6px 0 rgba(0,0,0,.1);
+}
+
+.emoji-picker .category {
+    background-color: #4d394b !important;
+    color: #afa8ae;
+}
+
+.emoji-picker .categories .item.selected {
+    border-bottom-color: #afa8ae;
+}
+
+.emoji-picker .scroller::-webkit-scrollbar-thumb {
+    background-color: #61485e !important;
+    border-color: none !important;
+}
+
+.emoji-picker .scroller::-webkit-scrollbar-track-piece {
+	background-color: #4d394b;
+}
+
+.diversity-selector .popout {
+    background: #4d394b;
+    border: 1px solid #3c303a;
+    box-shadow: 0 2px 6px 0 rgba(0,0,0,.1);
+}
+
+.emoji-picker .dimmer.visible {
+    background-color: hsla(0, 0%, 100%, 0.15);
+    border-radius: 8px;
 }
 
 .option-popout .btn-item {
@@ -246,6 +264,20 @@
     background-color: #ad93aa !important;
 }
 
+.guilds-wrapper .guilds-add {
+    background: #61485e;
+    color: #b1acb1;
+    border: 1px dashed #b1acb1;
+}
+
+.guilds-wrapper .guild-separator:after {
+    background: #b1acb1;
+}
+
+.guilds-wrapper .guilds .friends-online {
+    color: #b1acb1;
+}
+
 .slider-bar-fill {
     background: #5f485c;
 }
@@ -334,6 +366,14 @@
 
 .nameMutedText-1YDcP-, .nameMutedVoice-26k4cP {
     color: #747575;
+}
+
+.theme-dark .ui-quick-select-popout {
+    background: #4d394b;
+}
+
+.theme-dark .ui-quick-select-popout-option:hover {
+    background-color: #523f52;
 }
 
 .connecting {
