--- a/userstyles.css
+++ b/userstyles.css
@@ -12,7 +12,9 @@
 .theme-dark .messages-wrapper .messages .divider:before,
 .need-help-modal .header,
 .channels-wrap,
-.contentSelectedText-3j5CXt {
+.contentSelectedText-3j5CXt,
+.theme-dark .ui-video,
+.theme-dark .private-channel-call {
     background-color: #3e313c;
 }
 
@@ -54,7 +56,8 @@
 }
 
 .theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-track-piece,
-.theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-track-piece {
+.theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-track-piece,
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
     background-color: #4d394c;
     border-color: #3e313c;
 }
@@ -106,21 +109,6 @@
     border-right-color: #4d394b;
 }
 
-.emoji-picker {
-    background-color: #4d394b !important;
-    border: 1px solid rgba(191, 191, 191, 0.2);
-    box-shadow: 0 0 6px 0 rgba(0,0,0,.1);
-}
-
-.emoji-picker .category {
-    background-color: #4d394b !important;
-    color: #afa8ae;
-}
-
-.emoji-picker .categories .item.selected {
-    border-bottom-color: #afa8ae;
-}
-
 .search-bar.search-bar-light {
     background-color: #4d394b !important;
 }
@@ -133,10 +121,40 @@
     color: #afa8ae !important;
 }
 
-.ui-scroller-fade .scroller:hover::-webkit-scrollbar-thumb, .ui-scroller-fade .scroller:hover::-webkit-scrollbar-track, .ui-scroller-fade:hover::-webkit-scrollbar-thumb, .ui-scroller-fade:hover::-webkit-scrollbar-track {
+.emoji-picker {
     background-color: #4d394b !important;
-    border-color: #4d394b !important;
-    border-radius: 0;
+    border: 1px solid rgba(191, 191, 191, 0.2);
+    border-radius: 8px;
+    box-shadow: 0 0 6px 0 rgba(0,0,0,.1);
+}
+
+.emoji-picker .category {
+    background-color: #4d394b !important;
+    color: #afa8ae;
+}
+
+.emoji-picker .categories .item.selected {
+    border-bottom-color: #afa8ae;
+}
+
+.emoji-picker .scroller::-webkit-scrollbar-thumb {
+    background-color: #61485e !important;
+    border-color: none !important;
+}
+
+.emoji-picker .scroller::-webkit-scrollbar-track-piece {
+	background-color: #4d394b;
+}
+
+.diversity-selector .popout {
+    background: #4d394b;
+    border: 1px solid #3c303a;
+    box-shadow: 0 2px 6px 0 rgba(0,0,0,.1);
+}
+
+.emoji-picker .dimmer.visible {
+    background-color: hsla(0, 0%, 100%, 0.15);
+    border-radius: 8px;
 }
 
 .option-popout .btn-item {
@@ -245,6 +263,20 @@
     background-color: #ad93aa !important;
 }
 
+.guilds-wrapper .guilds-add {
+    background: #61485e;
+    color: #b1acb1;
+    border: 1px dashed #b1acb1;
+}
+
+.guilds-wrapper .guild-separator:after {
+    background: #b1acb1;
+}
+
+.guilds-wrapper .guilds .friends-online {
+    color: #b1acb1;
+}
+
 .slider-bar-fill {
     background: #5f485c;
 }
@@ -310,11 +342,11 @@
 }
 
 .theme-dark.context-menu .item-subMenu {
-    background: url(https://discordapp.com//assets/e4afe52f6863408a35654a6e5fd69ba9.svg) 155px 50% no-repeat rgba(0, 0, 0, 0.1);
+    background: url(https://discordapp.com/assets/e4afe52f6863408a35654a6e5fd69ba9.svg) 155px 50% no-repeat rgba(0, 0, 0, 0.1);
 }
 
 .theme-dark.context-menu .item-subMenu:hover {
-    background: url(https://discordapp.com//assets/e4afe52f6863408a35654a6e5fd69ba9.svg) 155px 50% no-repeat rgba(0, 0, 0, 0.2);
+    background: url(https://discordapp.com/assets/e4afe52f6863408a35654a6e5fd69ba9.svg) 155px 50% no-repeat rgba(0, 0, 0, 0.2);
 }
 
 .theme-dark .message-group .mentioned .message-text {
@@ -333,6 +365,14 @@
 
 .nameMutedText-1YDcP-, .nameMutedVoice-26k4cP {
     color: #747575;
+}
+
+.theme-dark .ui-quick-select-popout {
+    background: #4d394b;
+}
+
+.theme-dark .ui-quick-select-popout-option:hover {
+    background-color: #523f52;
 }
 
 .connecting {
